Fixed a few bad code practices and performance issues.
git-svn-id: svn://svn.syncleus.com/dANN/trunk@208 6ae8b97b-f314-0410-8212-aecf10b92ded